--- a/Views/Races/Edit.cshtml
+++ b/Views/Races/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model RunWepApp_withIdentity_TeddySmith_Youtube.ViewModels.ClubViewModel;
+﻿@model RunWepApp_withIdentity_TeddySmith_Youtube.ViewModels.RaceViewModel;
 @using RunWepApp_withIdentity_TeddySmith_Youtube.Data.Enum;
 
 @{
@@ -32,11 +32,11 @@
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ClubCategory" class="control-label"></label>
-                <select asp-for="ClubCategory" class ="form-control" asp-items="@Html.GetEnumSelectList<ClubCategory>()">
+                <label asp-for="RaceCategory" class="control-label"></label>
+                <select asp-for="RaceCategory" class ="form-control" asp-items="@Html.GetEnumSelectList<RaceCategory>()">
                     <option>--Select--</option>
                 </select>
-                <span asp-validation-for="ClubCategory" class="text-danger"></span>
+                <span asp-validation-for="RaceCategory" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address.Street" class="control-label"></label>
