--- a/Views/Races/Delete.cshtml
+++ b/Views/Races/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model RunWepApp_withIdentity_TeddySmith_Youtube.Models.Club
+﻿@model RunWepApp_withIdentity_TeddySmith_Youtube.Models.Races
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Club</h4>
+    <h4>Race</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.Address.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClubCategory)
+            @Html.DisplayNameFor(model => model.RaceCategory)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClubCategory)
+            @Html.DisplayFor(model => model.RaceCategory)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AppUser)
