--- a/Views/Authentification/Login.cshtml
+++ b/Views/Authentification/Login.cshtml
@@ -17,7 +17,7 @@
 
 
     <form asp-action="login" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
             <label class="control-label" asp-for="Email" ></label>
             <input asp-for="Email" class="form-control" />
