--- a/Views/Authentification/Register.cshtml
+++ b/Views/Authentification/Register.cshtml
@@ -17,7 +17,8 @@
 
 
     <form asp-action="register" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
             <label class="control-label" asp-for="Email" ></label>
             <input asp-for="Email" class="form-control" />
@@ -28,6 +29,10 @@
             <label class="control-label" asp-for="Password" ></label>
             <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
+            @if(@ViewData["Password"]!=null)
+            {
+                <span class="text-danger">@ViewData["Password"]</span>
+            }
         </div>
 
         <div class="form-group">
