--- a/Views/Races/Details.cshtml
+++ b/Views/Races/Details.cshtml
@@ -24,7 +24,10 @@
     </div>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Delete" asp-route-id="@Model?.Id">Delete</a> |
+    @if(User.Identity.IsAuthenticated && User.IsInRole("admin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Edit | </a> 
+        <a asp-action="Delete" asp-route-id="@Model?.Id">Delete |</a> 
+    }
     <a asp-action="Index">Back to List</a>
 </div>
