--- a/Views/Races/Index.cshtml
+++ b/Views/Races/Index.cshtml
@@ -22,7 +22,10 @@
             <div class="d-flex justify-content-between">
                 <div class="d-grid gap-2 d-md-flex justify-content-evenly">
                   <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
-                  <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a>
+                  @if(User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                  {    
+                      <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a>
+                  }
                 </div>
                 <span class="text-muted">@item.RaceCategory</span>
             </div>
