--- a/Views/Clubs/Create.cshtml
+++ b/Views/Clubs/Create.cshtml
@@ -13,6 +13,7 @@
     <div class="col-md-4" >
         <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="AppUserId" id="AppUserId" name="AppUserId"/>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
