--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -3,7 +3,7 @@
 <h1 class="display-4 fw-normal">User Dashboard</h1>
 <a type="button" class="btn btn-primary" asp-area="" asp-controller="Clubs" asp-action="Create">Create Club</a>
 <a type="button" class="btn btn-primary" asp-area="" asp-controller="Races" asp-action="Create">Create Race</a>
-<a type="button" class="btn btn-primary" asp-area="" asp-controller="Dashboard" asp-action="EditUserProfile">Edit User Profile</a>
+<a type="button" class="btn btn-primary" asp-area="" asp-controller="Dashboard" asp-action="EditUserProfil">Edit User Profile</a>
 
 <div class="album py-5 bg-light">
     <div class="container">
@@ -22,12 +22,12 @@
                             <p class="card-text">@item.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a type="btn btn-success" asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id"
+                                    <a type="btn btn-success" asp-controller="Races" asp-action="Details" asp-route-id="@item.Id"
                                    class="btn btn-sm btn-outline-secondary">View</a>
                                     @if(User.Identity.IsAuthenticated)
                                     {
-                                        <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                        <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                        <a asp-controller="Races" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                        <a asp-controller="Races" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
                                     }
                                 </div>
                                 <small class="text-muted">@item.RaceCategory</small>
@@ -49,8 +49,13 @@
                             <p class="card-text">@item.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a type="btn btn-success" asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id"
+                                    <a type="btn btn-success" asp-controller="Clubs" asp-action="Details" asp-route-id="@item.Id"
                                    class="btn btn-sm btn-outline-secondary">View</a>
+                                    @if(User.Identity.IsAuthenticated)
+                                    {
+                                        <a asp-controller="Clubs" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                        <a asp-controller="Clubs" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                    }
 @*                                    @if (SignInManager.IsSignedIn(User))
                                     {
                                         <a asp-controller="Club" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
