--- a/Views/Dashboard/EditUserProfil.cshtml
+++ b/Views/Dashboard/EditUserProfil.cshtml
@@ -11,18 +11,28 @@
     </div>
     <div class="form-group">
         <label asp-for="Mileage"></label>
-        <input asp-for="Mileage" class="form-control" placeholder="Pace"/>
+        <input asp-for="Mileage" class="form-control" placeholder="Mileage"/>
         <span asp-validation-for="Mileage" class="text-danger"></span>
     </div> 
     <div class="form-group">
-        <label asp-for="Pace"></label>
-        <input asp-for="Pace" class="form-control" placeholder="Pace"/>
-        <span asp-validation-for="Pace" class="text-danger"></span>
+        <label asp-for="Street"></label>
+        <input asp-for="Street" class="form-control" placeholder="Street"/>
+        <span asp-validation-for="Street" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Mileage"></label>
-        <input asp-for="Mileage" class="form-control" placeholder="Pace"/>
-        <span asp-validation-for="Mileage" class="text-danger"></span>
+        <label asp-for="City"></label>
+        <input asp-for="City" class="form-control" placeholder="City"/>
+        <span asp-validation-for="City" class="text-danger"></span>
     </div> 
-
+    <div class="form-group">
+        <label asp-for="Street"></label>
+        <input asp-for="Street" class="form-control" placeholder="Street"/>
+        <span asp-validation-for="Street" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Image"></label>
+        <input asp-for="Image" type="file" class="form-control" placeholder="Image"/>
+        <span asp-validation-for="Image" class="text-danger"></span>
+    </div> 
+    <input type="submit" value="submit" class="btn btn-primary"/>
 </form>
